--- a/admin/asstes/css/style.css
+++ b/admin/asstes/css/style.css
@@ -224,32 +224,40 @@ ul li :hover {
 }
 
 .container .table-books table thead tr {
-   border-bottom: 0.10rem solid var(--color-text-secondary);
+   background-color: var(--background-header);
    position: sticky;
    top: 0;
+   border-radius: var(--Radius);
 }
 
+.container .table-books table thead tr th {
+   padding: 0.7rem;
+}
 .container .table-books table tbody td {
    padding: 0.5rem;
-}
 
+}
+.container .table-books table tbody tr {
+    background-color: #f9f9f9;
+    border-bottom: 1px solid var(--color-text-secondary);
+}
 .container .table-books table tbody tr .btn {
    padding: 0.5rem 1.5rem;
    border-radius: var(--Radius);
    border: none;
    cursor: pointer;
+
+ 
 }
 
 .container .table-books table tbody tr .delete,
 .container .table-books table tbody tr .update {
-   background-color: red;
-   color: var(--color-bg);
+   color: var(--color-text-secondary);
+   background-color: #f9f9f9;
    font-size: 1rem;
 }
 
-.container .table-books table tbody tr .update {
-   background-color: var(--btn);
-}
+
 
 /* end page admin */
 
